<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.view.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:background="@color/white"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:maxLines="5"
        android:ellipsize="end"
        android:padding="@dimen/common_padding_min"
        android:text="@string/title_payment"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvMethodPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:background="@color/white"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:maxLines="5"
        android:ellipsize="end"
        android:padding="@dimen/common_padding_min"
        android:text="@string/subtitle_method_payment"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_middle"
        android:hint="@string/hint_amount_charge"
        app:helperText="@string/helper_required"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_attach_money"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/tvMethodPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/initial_price"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_charge"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintTop_toBottomOf="@+id/tilPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>