<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.view.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImgProduct"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_img_photo"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/color_white_t"
                android:textAppearance="?attr/textAppearanceBody2"
                android:maxLines="1"
                android:ellipsize="end"
                android:padding="@dimen/common_padding_min"
                tools:text="Nombre del producto"
                android:text="@string/name_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvTitleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:background="@color/white"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:maxLines="1"
        android:ellipsize="end"
        android:padding="@dimen/common_padding_min"
        android:text="Zapatillas"
        app:layout_constraintTop_toBottomOf="@+id/cardImgProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:background="@color/white"
        android:textAppearance="?attr/textAppearanceBody1"
        android:maxLines="5"
        android:ellipsize="end"
        android:padding="@dimen/common_padding_min"
        android:text="lorem"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_middle"
        android:hint="Precio"
        app:helperText="@string/helper_required"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_attach_money"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/initial_price"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ir a pagar"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>