<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.payment.MethodPaymentFragment"
    android:padding="@dimen/common_padding_min">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:progress" />

    <androidx.cardview.widget.CardView
        android:id="@+id/creditCard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:paddingHorizontal="@dimen/common_padding_default">

            <ImageView
                android:id="@+id/imgType"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/master_card"
                android:contentDescription="@string/description_img_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearNumberCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgType"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFirstNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="26sp"
                    android:text="****" />

                <TextView
                    android:id="@+id/tvSecondNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="26sp"
                    android:text="****"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/tvThirdNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="26sp"
                    android:text="****"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/tvFourthNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="26sp"
                    android:text="8014"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvLabelNamePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_middle"
                android:text="Nombre titular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearNumberCard" />

            <TextView
                android:id="@+id/tvNamePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                tools:text="LUIS FELIPE CARRASCO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelNamePerson" />

            <TextView
                android:id="@+id/tvLabelDateExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha expiración"
                app:layout_constraintTop_toTopOf="@+id/tvLabelNamePerson"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDateExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08/21"
                android:layout_marginTop="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelDateExpire"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginTop="@dimen/common_padding_default"
        app:helperText="@string/helper_required"
        app:endIconMode="clear_text"
        app:counterMaxLength="@integer/counter_max_name"
        app:counterEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/creditCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/counter_max_name"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDateExpire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Número Tarjeta"
        android:layout_marginTop="@dimen/common_padding_min"
        app:helperText="@string/helper_required"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:counterMaxLength="@integer/counter_max_name"
        app:counterEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDateExpire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/counter_max_number_card"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/dropdownPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:minHeight="48dp"
        android:contentDescription="@string/description_spinner"
        app:layout_constraintTop_toBottomOf="@+id/tilDateExpire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/dropdownCardIssues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:minHeight="48dp"
        android:contentDescription="@string/description_spinner"
        app:layout_constraintTop_toBottomOf="@+id/dropdownPaymentMethod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/dropdownInstallments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="@dimen/common_padding_min"
        android:contentDescription="@string/description_spinner"
        app:layout_constraintTop_toBottomOf="@+id/dropdownCardIssues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Realizar Pago"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>